# ProjectHub

./: .gitignore  README.md  ROADMAP.md  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: release-windows.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  event_log.rs  hotkeys.rs  lib.rs  main.rs  preferences.rs  project.rs  pruner.rs  store.rs  window_manager.rs
src/lib/: api.ts  store.svelte.ts  time.svelte.ts  types.ts
src/lib/components/: AddProjectDialog.svelte  Dock.svelte  HotkeyInput.svelte  ProjectCard.svelte  WindowPicker.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/dialog/add-project/: +page.svelte
src/routes/dialog/manage/: +page.svelte
